--- a/Tsybenko_files/resume.css
+++ b/Tsybenko_files/resume.css
@@ -1,5 +1,7 @@
 * { box-sizing: border-box; }
 
+body { background-color: #f7f7f7; }
+
 img { max-width: 100%; }
 
 body { font-size: 16px; line-height: 1.5; font-family: "Merriweather", "Times New Roman", serif; font-weight: 300; margin: 2rem 0; }
